<resources>
    <string name="app_name">WARSHOP</string>
    <string name="msg_dengan_melanjut">Dengan menyetujui Syarat &amp; Ketentuan dan Kebijakan Privasi Kami anda dapat melanjutkan</string>
    <string name="lbl_daftar">daftar</string>
    <string name="frist_name">Frist Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="Belum_punya_akun">Belum Punya Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="set_up_your_profile">Set Up your Profile</string>
    <string name="search_now">Search Now</string>
    <string name="tabs_for_navigation">Tabs for navigation</string>
</resources>