<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:id="@+id/frameRegister"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    style="@style/grousStylewhite_A700"
    android:background="#604531">
    <TextView
        android:id="@+id/SetUp"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginStart="19sp"
        android:layout_marginTop="50sp"
        android:singleLine="true"
        android:text="@string/set_up_your_profile"
        android:textSize="25sp"
        android:textColor="@color/g_gray500" />
    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/linearColumndaftarvircle"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_20pxh"
        android:layout_marginEnd="@dimen/_19pxh"
        android:layout_marginStart="@dimen/_19pxh"
        android:layout_marginTop="@dimen/_70pxh"
        android:layout_width="match_parent" android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstnameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxh"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/_10pxh"
            app:boxCornerRadiusBottomStart="@dimen/_10pxh"
            app:boxCornerRadiusTopEnd="@dimen/_10pxh"
            app:boxCornerRadiusTopStart="@dimen/_10pxh"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/frist_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxh"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_7pxh"
                android:singleLine="true"
                android:textColorHint="@color/white_A700"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxh"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/lastnameRegister"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="@dimen/_10pxh"
            app:boxCornerRadiusBottomEnd="@dimen/_10pxh"
            app:boxCornerRadiusBottomStart="@dimen/_10pxh"
            app:boxCornerRadiusTopEnd="@dimen/_10pxh">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxh"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_7pxh"
                android:singleLine="true"
                android:textColorHint="@color/white_A700"
                tools:ignore="HardcodedText,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxh"
            android:id="@+id/InputEmailregister"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="@dimen/_10pxh"
            app:boxCornerRadiusBottomEnd="@dimen/_10pxh"
            app:boxCornerRadiusBottomStart="@dimen/_10pxh"
            app:boxCornerRadiusTopEnd="@dimen/_10pxh">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/img_vector"
                android:drawablePadding="@dimen/_19pxh"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxh"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_7pxh"
                android:singleLine="true"
                android:textColorHint="@color/white_A700"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxh"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/inputPasswordRegister"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="@dimen/_10pxh"
            app:boxCornerRadiusBottomEnd="@dimen/_10pxh"
            app:boxCornerRadiusBottomStart="@dimen/_10pxh"
            app:boxCornerRadiusTopEnd="@dimen/_10pxh">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="@dimen/_19pxh"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxh"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingBottom="@dimen/_7pxh"
                android:singleLine="true"
                android:textColorHint="@color/white_A700" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfiPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxh"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="@dimen/_10pxh"
            app:boxCornerRadiusBottomEnd="@dimen/_10pxh"
            app:boxCornerRadiusBottomStart="@dimen/_10pxh"
            app:boxCornerRadiusTopEnd="@dimen/_10pxh">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/KonfirmasiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="@dimen/_19pxh"
                android:hint="@string/konfirmasi_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxh"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingBottom="@dimen/_7pxh"
                android:singleLine="true"
                android:textColorHint="@color/white_A700" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowlanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_25pxh"
            android:layout_width="match_parent" android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/h2white"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:ellipsize="end"
                android:paddingStart="60sp"
                android:singleLine="true"
                android:text="@string/sudah_punya_akun"
                tools:ignore="RtlSymmetry,TextSizeCheck" />
            <TextView
                android:id="@+id/txtMasuk"
                style="@style/h2white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_marginStart="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/masuk"
                android:textColor="@color/white_A700" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxh"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDenganmelanjut"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_width="match_parent"
                android:text="@string/msg_dengan_melanjut"
                style="@style/h2white" tools:text="@string/msg_dengan_melanjut"/>
        </LinearLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnDaftar"
            style="@style/btnSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_30pxh"
            android:layout_marginEnd="@dimen/_12pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxh"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_11pxh"
            android:singleLine="true"
            android:text="@string/lbl_daftar"
            android:textAllCaps="false"
            app:spinning_bar_color="@color/black"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_daftar" />
    </LinearLayout>
</FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>